RESOLVED FIXED35360
[chromium] WebCookieJar.h is missing a WebString.h include
https://bugs.webkit.org/show_bug.cgi?id=35360
Summary [chromium] WebCookieJar.h is missing a WebString.h include
Darin Fisher (:fishd, Google)
Reported 2010-02-24 14:26:31 PST
[chromium] WebCookieJar.h is missing a WebString.h include This is required since some of the methods have implementations that return a WebString.
Attachments
v1 patch (1008 bytes, patch)
2010-02-24 14:27 PST, Darin Fisher (:fishd, Google)
no flags
v2 patch (better changelog entry) (1.05 KB, patch)
2010-02-24 14:30 PST, Darin Fisher (:fishd, Google)
levin: review+
Darin Fisher (:fishd, Google)
Comment 1 2010-02-24 14:27:14 PST
Created attachment 49436 [details] v1 patch
Darin Fisher (:fishd, Google)
Comment 2 2010-02-24 14:30:53 PST
Created attachment 49438 [details] v2 patch (better changelog entry)
Darin Fisher (:fishd, Google)
Comment 3 2010-02-25 09:13:44 PST
Note You need to log in before you can comment on or make changes to this bug.