2010-02-24  Darin Fisher  <darin@chromium.org>

Reviewed by David Levin.

        Add a missing WebString.h include.
        https://bugs.webkit.org/show_bug.cgi?id=35360

        This is required since some of the methods have implementations that
        return a WebString.

        * public/WebCookieJar.h:



Canonical link: https://commits.webkit.org/46540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55239 268f45cc-cd09-0410-ab3c-d52691b4dbfc